--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
     <head>
         <title>daguni</title>
+        <style>
+            html,
+            body {
+              height: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: #252525;
+            }
+            img {
+              border-radius: 20px;
+              width: 400px;
+              height: 600px;
+            }
+        </style>
     </head>
     <body>
-        <div>Hello World</div>
+        <img src="/no.1.jpeg">
     </body>
 </html>
